# aws-upskilling

./: .gitignore  README.md  pyproject.toml
aws_upskilling/: README.md
aws_upskilling/analytics_portfolio/: README.md  analytics-notebook.html  lambda_function.py
aws_upskilling/hit_counter/: README.md  app.py  cdk.json
aws_upskilling/hit_counter/cdk.out/: PipelineStack.assets.json  PipelineStack.template.json  hit-counter.assets.json  hit-counter.template.json  manifest.json  tree.json
aws_upskilling/hit_counter/cdk.out/asset.bfe8a1b034c2f97183f783469502e3c816ad281175458e98f50aead6ee3270f0/: hello.py
aws_upskilling/hit_counter/hit_counter/: hit_counter_stack.py  hitcounter.py  pipeline_stack.py
aws_upskilling/hit_counter/tests/unit/: test_hit_counter_stack.py
