[tool.poetry]
name = "aws-upskilling"
version = "0.1.0"
description = ""
authors = ["jordanhoare <jordanhoare0@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.2"
python-dotenv = "^0.19.2"
flake8 = "^4.0.1"
black = "^21.12b0"
isort = "^5.10.1"
wheel = "^0.37.1"
Pillow = "^9.0.1"
awscli = "^1.22.75"
"aws-cdk.aws-s3" = "^1.148.0"
"aws-cdk.aws-lambda" = "^1.148.0"

[tool.poetry.dev-dependencies]
black = {version = "^21.12b0", allow-prereleases = true}
mypy = "^0.931"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

